--- a/js_02.html
+++ b/js_02.html
@@ -23,5 +23,10 @@
         }
     </script>
     <button type="button" onclick="myFunction1()">点击这里</button>
+
+    <!-- Write outside script-->
+    <button type="button" onclick="myFunction2()">点击这里</button>
+    <script type="text/javascript" src="js/02.js"></script>
+　<p><b>注释：</b>myFuction2()保存在外部js/02.js文件中 </p>
 </body>
 </html>
