--- a/js_04.html
+++ b/js_04.html
@@ -11,6 +11,8 @@
         <script>
             document.getElementById("demo").innerHTML="Hello World";
             document.getElementById("myDiv").innerHTML="How are you?";
+
+            document.write("Hello \ World!");
         </script>
     </body>
 </html>
