--- a/js_html_DOM/js_11.html
+++ b/js_html_DOM/js_11.html
@@ -22,10 +22,10 @@
     </script>
 
     <br>
-    <img src="img/eg_bulbon.gif" id="image">
+    <img src="../img/eg_bulbon.gif" id="image">
     <script>
         document.getElementById("image")
-                .src = "img/eg_bulboff.gif";
+                .src = "../img/eg_bulboff.gif";
     </script>
 </body>
 </html>
