--- a/study_base/js_01.html
+++ b/study_base/js_01.html
@@ -35,15 +35,15 @@
             function changeImage(){
                 var element = document.getElementById('myimage');
                 if(element.src.match("bulbon")){
-                    element.src="img/eg_bulboff.gif";
+                    element.src="../img/eg_bulboff.gif";
                 }else{
-                    element.src="img/eg_bulbon.gif";
+                    element.src="../img/eg_bulbon.gif";
                 }
 
             }
         </script>
 
-        <img id="myimage" onclick="changeImage()" src="img/eg_bulboff.gif">
+        <img id="myimage" onclick="changeImage()" src="../img/eg_bulboff.gif">
         <p>点击灯泡来点亮或熄灭这盏灯</p>
     <!-- -->
         <p id="demo1">
