--- a/study_base/js_02.html
+++ b/study_base/js_02.html
@@ -26,7 +26,7 @@
 
     <!-- Write outside script-->
     <button type="button" onclick="myFunction2()">点击这里</button>
-    <script type="text/javascript" src="../js/02.js"></script>
-　<p><b>注释：</b>myFuction2()保存在外部js/02.js文件中 </p>
+    <script type="text/javascript" src="02.js"></script>
+　<p><b>注释：</b>myFuction2()保存在外部02.js文件中 </p>
 </body>
 </html>
